salesforce/force-app/main/default/objects/ForensicSuppression__c/ForensicSuppression__c.object-meta.xml
<CustomObject>
    <description>Records that future scans should skip. Created when a user marks a finding as False Positive or Not Relevant.</description>
    <label>Forensic Suppression</label>
    <nameField>
        <displayFormat>SUP-{0000}</displayFormat>
        <label>Suppression #</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Forensic Suppressions</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>