salesforce/force-app/main/default/objects/ForensicSuppression__c/fields/DetectorId__c.field-meta.xml
<CustomField>
    <fullName>DetectorId__c</fullName>
    <label>Detector ID</label>
    <length>40</length>
    <required>true</required>
    <type>Text</type>
</CustomField>