salesforce/force-app/main/default/objects/ForensicSuppression__c/fields/PrimaryRecordId__c.field-meta.xml
<CustomField>
    <fullName>PrimaryRecordId__c</fullName>
    <label>Primary Record ID</label>
    <length>18</length>
    <type>Text</type>
</CustomField>